added "Back to main Menu" for each panel, added search for patient